# attractor-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: checks.yml
src/attractor_explorer/: attractors.py  attractors_explorer.py  maths.py  shared.py
tests/: test_attractors.py  test_maths.py  test_shared.py
