[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "attractor-explorer"
dynamic = ["version"]
description = 'A panel dashboard for exploring strange attractors'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [{ name = "Joseph Barraud", email = "joseph.barraud@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pandas",
  "numba",
  "datashader",
  "colorcet",
  "bokeh",
  "holoviews",
  "panel",
  "param",
  "pydantic",
  "dask[dataframe]",
]

[project.optional-dependencies]
ci = ["pytest>=8.3.3", "pytest-cov>=5.0.0", "ruff>=0.6.4"]

dev = [
  "attractor-explorer[ci]",
  "hvplot>=0.10.0",
  "ipykernel>=6.29.5",
  "seaborn>=0.13.2",
  "jupyter_bokeh",
]

[project.urls]
# Documentation = "https://github.com/jobar8/attractors2023#readme"
# Issues = "https://github.com/jobar8/attractors2023/issues"
# Source = "https://github.com/jobar8/attractors2023"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/attractor_explorer/_version.py"

[tool.pytest.ini_options]
addopts = "--cov=attractor_explorer"

# [tool.coverage.run]
# source_pkgs = ["attractor_explorer", "tests"]
# branch = true
# parallel = true

# [tool.coverage.paths]
# attractor_explorer = [
#   "src/attractor_explorer",
#   "*/attractor-explorer/src/attractor_explorer",
# ]
# tests = ["tests", "*/attractor-explorer/tests"]

# [tool.coverage.report]
# exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
